syntax = "proto3";

package data;

option go_package = "./foodpb";

message Food {
  uint32 id = 1;
  string name = 2;
  double protein = 3;
  double fat = 4;
  double carbs = 5;
}

message CreateFoodRequest {
  Food food = 1;
}

message CreateFoodResponse {
}

message ReadFoodRequest {
  string food_id = 1;
}

message ReadFoodResponse {
  Food food = 1;
}

message UpdateFoodRequest {
  Food food = 1;
}

message UpdateFoodResponse {
  Food food = 1;
}

message DeleteFoodRequest {
  string food_id = 1;
}

message DeleteFoodResponse {
}

message ListFoodRequest {
  string food_id = 1;
}

message ListFoodResponse {
  Food food = 1;
}

service FoodService {
  rpc CreateFood (CreateFoodRequest) returns (CreateFoodResponse);
  rpc ReadFood (ReadFoodRequest) returns (ReadFoodResponse);
  rpc UpdateFood (UpdateFoodRequest) returns (UpdateFoodResponse);
  rpc DeleteFood (DeleteFoodRequest) returns (DeleteFoodResponse);
  rpc ListFoods (stream ListFoodRequest) returns (stream ListFoodResponse){};
}

message Menu {
  uint32 id = 1;
  string name = 2;
  double protein = 3;
  double fat = 4;
  double carbs = 5;
}

message CreateMenuRequest {
  Menu menu = 1;
}

message CreateMenuResponse {
}

message ReadMenuRequest {
  string menu_id = 1;
}

message ReadMenuResponse {
  Menu menu = 1;
}

message UpdateMenuRequest {
  Menu menu = 1;
}

message UpdateMenuResponse {
  Menu menu = 1;
}

message DeleteMenuRequest {
  string menu_id = 1;
}

message DeleteMenuResponse {
}

message ListMenuRequest {
  string menu_id = 1;
}

message ListMenuResponse {
  Menu menu = 1;
}

message ListAllMenusRequest {

}

message ListAllMenusResponse {
  Menu menu = 1;
}

service MenuService {
  rpc CreateMenu (CreateMenuRequest) returns (CreateMenuResponse);
  rpc ReadMenu (ReadMenuRequest) returns (ReadMenuResponse);
  rpc UpdateMenu (UpdateMenuRequest) returns (UpdateMenuResponse);
  rpc DeleteMenu (DeleteMenuRequest) returns (DeleteMenuResponse);
  rpc ListMenu (stream ListMenuRequest) returns (stream ListMenuResponse){};
  rpc ListAllMenus (ListAllMenusRequest) returns (stream ListAllMenusResponse){};
}